Now all names follow Mooncell

--- a/calc2.html
+++ b/calc2.html
@@ -22,7 +22,7 @@
             <tr>
                 <td colspan="8">
                     <select id="ddlServant">
-                        <option value=-1>|----------------------请选择从者-------------------------|</option>
+                        <option value=-1>|-----------请选择从者-----------|</option>
                     </select>
                     <label for="ckIsMaxGrail">
                         <input type="checkbox" id="ckIsMaxGrail" />圣杯MAX
@@ -446,7 +446,7 @@
 		<td>队友1</td>
 		<td>
 		    <select id="ddlSupport1" oldvalue=-1 onchange="initialSupport(1)">
-                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                        <option value=-1>|-----------请选择从者-----------|</option>
                     </select>
 		</td>
 		<td>技能1</td>
@@ -511,7 +511,7 @@
 		<td>队友2</td>
 		<td>
 		    <select id="ddlSupport2" oldvalue=-1 onchange="initialSupport(2)">
-                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                        <option value=-1>|-----------请选择从者-----------|</option>
                     </select>
 		</td>
 		<td>技能1</td>
@@ -576,7 +576,7 @@
 		<td>队友3</td>
 		<td>
 		    <select id="ddlSupport3" oldvalue=-1 onchange="initialSupport(3)">
-                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                        <option value=-1>|-----------请选择从者-----------|</option>
                     </select>
 		</td>
 		<td>技能1</td>
@@ -641,7 +641,7 @@
 		<td>队友4</td>
 		<td>
 		    <select id="ddlSupport4" oldvalue=-1 onchange="initialSupport(4)">
-                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                        <option value=-1>|-----------请选择从者-----------|</option>
                     </select>
 		</td>
 		<td>技能1</td>
@@ -706,7 +706,7 @@
 		<td>队友5</td>
 		<td>
 		    <select id="ddlSupport5" oldvalue=-1 onchange="initialSupport(5)">
-                        <option value=-1>|-------------------请选择从者-------------------|</option>
+                        <option value=-1>|-----------请选择从者-----------|</option>
                     </select>
 		</td>
 		<td>技能1</td>
