--- a/calc2.html
+++ b/calc2.html
@@ -1260,6 +1260,11 @@
 	bindSkill(2);
 	bindSkill(3);
         setOc();
+	for(let n=1;n<=5;n++) {
+	    for(let i=1;i<=3;i++) {
+		bindSupport(n,i);
+	    }
+	}
     }
 
     /***********************************************************/
