--- a/calc2.html
+++ b/calc2.html
@@ -226,6 +226,7 @@
                         <option value="393-11">20级绘画之夏</option>
                         <option value="0-12">15级某个夏天</option>
                         <option value="2000-13">100级轨迹</option>
+			<option value="750-14">80级虚数魔术</option>
                     </select>
                 </td>
                 <td>敌人1</td>
