--- a/calc2.html
+++ b/calc2.html
@@ -247,7 +247,7 @@
                         <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying1">
-                        <input type="checkbox" id="ckIsUndying1" /> 死灵
+                        <input type="checkbox" id="ckIsUndying1" /> np补正
                     </label>
                 </td>
                 <td>敌人2</td>
@@ -268,7 +268,7 @@
                         <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying2">
-                        <input type="checkbox" id="ckIsUndying2" /> 死灵
+                        <input type="checkbox" id="ckIsUndying2" /> np补正
                     </label>
                 </td>
                 <td>敌人3</td>
@@ -289,7 +289,7 @@
                         <option value="1-8">Foreigner</option>
                     </select>
                     <label for="ckIsUndying3">
-                        <input type="checkbox" id="ckIsUndying3" /> 死灵
+                        <input type="checkbox" id="ckIsUndying3" /> np补正
                     </label>
                 </td>
             </tr>
