--- a/calc2.html
+++ b/calc2.html
@@ -21,6 +21,37 @@
         <table class="servant">
             <tr>
                 <td colspan="8">
+		    <select id="ddlFilterStar" onchange="initialServantList()">
+			<option value=-1>筛选稀有度</option>
+			<option value=5>5</option>
+                        <option value=4>4</option>
+                        <option value=3>3</option>
+                        <option value=2>2</option>
+                        <option value=1>1</option>
+		    </select>
+                    <select id="ddlFilterClass" onchange="initialServantList()">
+			<option value=-1>筛选职阶</option>
+			<option value="Saber">Saber</option>
+                        <option value="Archer">Archer</option>
+                        <option value="Lancer">Lancer</option>
+                        <option value="Rider">Rider</option>
+                        <option value="Caster">Caster</option>
+                        <option value="Assassin">Assassin</option>
+                        <option value="Berserker">Berserker</option>
+                        <option value="Ruler">Ruler</option>
+                        <option value="Avenger">Avenger</option>
+                        <option value="MoonCancer">MoonCancer</option>
+                        <option value="Alterego">Alterego</option>
+                        <option value="Foreigner">Foreigner</option>
+                    </select>
+                    <select id="ddlFilterAttribute" onchange="initialServantList()">
+                        <option value=-1>筛选阵营</option>
+			<option value="天">天</option>
+			<option value="地">地</option>
+			<option value="人">人</option>
+			<option value="星">星</option>
+			<option value="兽">兽</option>
+                    </select>
                     <select id="ddlServant">
                         <option value=-1>|-----------请选择从者-----------|</option>
                     </select>
@@ -827,6 +858,7 @@
     /***********************************************************/
     initialData();
     initialServantList();
+    initialSupportList();
     loadStorage(true);
     bindSearchTips();
     var options = [new Option("Lv.80",80),new Option("Lv.70",70),new Option("Lv.65",65),new Option("Lv.60",60)];
