Testing new utility

--- a/calc2.html
+++ b/calc2.html
@@ -865,7 +865,7 @@
 -->
 		    <input type="button" value="清空" id="btnClearBuff" />
                     <input type="button" value="计算" id="btnCalculate" onclick="calc()" />
-		    <input type="button" value="排行" id="btnCompare" onclick="compare()"/>
+		    <input type="button" value="排行（功能测试中）" id="btnCompare" onclick="compareServants()"/>
                 </td>
             </tr>
         </table>
