--- a/calc3.html
+++ b/calc3.html
@@ -908,10 +908,10 @@
 </body>
 </html>
 <script src="js/lvs.js"></script>
-<script src="js/data.js"></script>
+<script src="js/data3.js"></script>
 <script src="js/common.js"></script>
 <script src="js/base2.js"></script>
-<script src="js/functions2.js"></script>
+<script src="js/functions3.js"></script>
 <script type="text/javascript">
     "use strict";
     /***********************************************************/
